# craft

./: .gitignore  LICENSE  MANIFESTO  Makefile  README.md  TODOs.org  Vagrantfile  craft.cabal  lts-10.yaml  lts-11.yaml  lts-12.yaml  lts-6.yaml  lts-8.yaml  package.yaml  stack-6.20.yaml  stack-7.yaml  stack.yaml
examples/: Basic.hs  Main.hs  Makefile  Vagrantfile
src/: Craft.hs
src/Craft/: Actions.hs  Apt.hs  Checksum.hs  Config.hs  Craftable.hs  DSL.hs  Daemontools.hs  Directory.hs  Dnf.hs  Error.hs  Exec.hs  Facter.hs  File.hs  Git.hs  Group.hs  Helpers.hs  Hostname.hs  Hosts.hs  Internal.hs  Log.hs  Nginx.hs  Options.hs  Package.hs  Pip.hs  Run.hs  S3File.hs  SSH.hs  Ssh.hs  SysV.hs  SysVinit.hs  Systemd.hs  Types.hs  Ubuntu.hs  Upstart.hs  User.hs  Utils.hs  Vagrant.hs  Watch.hs  Watched.hs  Wget.hs
src/Craft/Config/: Ini.hs  Json.hs  SSH.hs  Shell.hs  ShellFormat.hs  Ssh.hs  Yaml.hs
src/Craft/Directory/: Parser.hs
src/Craft/Exec/: Ssh.hs
src/Craft/File/: Link.hs  Mode.hs  Sourced.hs
src/Craft/Hosts/: Parser.hs  Types.hs
src/Craft/Internal/: FileDirectory.hs  Helpers.hs  UserGroup.hs
src/Craft/Internal/Helpers/: Parsing.hs
src/Craft/Run/: Internal.hs  Local.hs  Nspawn.hs  SSH.hs  Vagrant.hs
src/Craft/SSH/: AuthorizedKey.hs  PrivateKey.hs  PublicKey.hs
src/Craft/Ssh/: Config.hs  PrivateKey.hs
test/Craft/: S3FileSpec.hs  SSHSpec.hs
test/Craft/Config/: ShellSpec.hs
test/Craft/Directory/: ParserSpec.hs
test/Craft/File/: ModeSpec.hs
test/Craft/Hosts/: ParserSpec.hs
test/Craft/Run/: SSHSpec.hs
test/Craft/SSH/: AuthorizedKeySpec.hs  PublicKeySpec.hs
