name:                craft

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
-- synopsis:
-- description:
license:             Apache-2.0
-- license-file:        LICENSE
author:              Joe Hillenbrand
maintainer:          joehillen@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Craft
  exposed-modules:     Craft
                     , Craft.Apt
                     , Craft.Daemontools
                     , Craft.Directory
                     , Craft.DSL
                     , Craft.Facter
                     , Craft.File
                     , Craft.File.Link
                     , Craft.File.Mode
                     , Craft.File.Sourced
                     , Craft.Git
                     , Craft.Group
                     , Craft.Helpers
                     , Craft.Hostname
                     , Craft.Hosts
                     , Craft.Internal.Helpers
                     , Craft.Internal.FileDirectory
                     , Craft.Internal.UserGroup
                     , Craft.Nginx
                     , Craft.Pip
                     , Craft.Options
                     , Craft.S3File
                     , Craft.Ssh
                     , Craft.Ssh.PrivateKey
                     , Craft.SysV
                     , Craft.Types
                     , Craft.Upstart
                     , Craft.User
                     , Craft.Config.Ini
                     , Craft.Config.ShellFormat
                     , Craft.Config.Ssh
                     , Craft.Config.Yaml
                     , Craft.Config.Json
                     , Craft.Run
                     , Craft.Run.SSH
                     , Craft.Run.Local
                     , Craft.Run.Internal
                     , Craft.Run.Vagrant
                     , Craft.Log

  other-modules:       Craft.Internal
                     , Craft.Hosts.Parser
                     , Craft.Hosts.Types
                     , Craft.Directory.Parser

  default-language:    Haskell2010
  default-extensions:  RankNTypes
                     , OverloadedStrings
                     , RecordWildCards
                     , LambdaCase
                     , QuasiQuotes
                     , BangPatterns
                     , TemplateHaskell

  build-depends:       base >= 4.8 && < 4.9
                     , aeson
                     , ansi-terminal
                     , async
                     , bytestring
                     , cond
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , directory
                     , extra
                     , fast-logger
                     , filepath
                     , formatting
                     , free
                     , hashmap
                     , ini
                     , lens
                     , megaparsec
                     , MissingH
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , process
                     , process-extras
                     , pureMD5
                     , random
                     , split
                     , streaming-commons
                     , template-haskell
                     , text
                     , transformers
                     , unix
                     , versions
                     , wreq
                     , yaml

test-suite craft-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , craft
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
